# nltk-tree-ext

./: pyproject.toml
nltk-stubs/tree/: tree.pyi
nltk_tree_ext/: funcs.py
tests/: test_funcs.py
